# Lorena

./: .travis.yml  Makefile  Paquim-EDIT.sh  Paquim-INSTALL.sh  README.md  _config.yml  autorun.inf
boot/grub/: grub.cfg
docs/: index.html
root/: back.xcf  config.paquim
root/img/: back.xpm
src/: CMakeLists.txt  ND_GDT.cpp  ND_IDT.cpp  ND_IRQ.cpp  ND_ISR.cpp  ND_Keyboard.cpp  ND_Memory.cpp  ND_Panic.cpp  ND_Ports.cpp  ND_Screen.cpp  ND_String.cpp  ND_Timer.cpp  NextKernel_Main.cpp  NextShellLite.cpp  NextShellLite.hpp  boot.asm  math.cpp
src/include/: ND_Version.hpp
src/include/Lorena/: math.cpp
src/include/ND/: ND_Color.hpp  ND_GDT.hpp  ND_IDT.hpp  ND_IRQ.hpp  ND_ISR.hpp  ND_Keyboard.hpp  ND_Keymap.hpp  ND_Memory.hpp  ND_Panic.hpp  ND_Ports.hpp  ND_Screen.hpp  ND_String.hpp  ND_Timer.hpp  ND_Types.hpp  ND_Version.hpp
sys/: START.ELF  en_START.ELF
