PROJECT(Lorena-src ASM C CXX)

ENABLE_LANGUAGE(ASM-ATT)
#ENABLE_LANGUAGE(ASM_NASM)

FILE(GLOB ASM_START "*.asm")
FILE(GLOB CXX_START "*.cpp")
SET(SRC_START ${ASM_START} ${CXX_START})
SET(CMAKE_ASM-ATT_FLAGS "--32")
SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-m32")
SET(CMAKE_EXE_LINKER_FLAGS "-T./link.ld -std=c++11 -nostdlib -fPIC -ffreestanding -lgcc")
ADD_DEFINITIONS("-DLORENA")
INCLUDE_DIRECTORIES(./include/ND/)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include/Lorena/)

ADD_EXECUTABLE(START.ELF ${SRC_START})
INSTALL(TARGETS START.ELF DESTINATION next)
